@@ -174,6 +174,9 @@
   <!-- TASK -->
   <records interface="opengever.task.interfaces.ITaskSettings" />
 
+  <!-- Usersnap -->
+  <records interface="opengever.base.interfaces.IUserSnapSettings" />
+
   <!-- WOPI (Office Online) -->
   <records interface="opengever.wopi.interfaces.IWOPISettings" />
 
